kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tradevis-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      try_files $uri $uri/ /index.html;
  labels:
    app: tradevis
spec:
  ingressClassName: nginx
  rules:
  - host: tradevis.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tradevis-frontend
            port:
              number: 80
